fix(exercizer): #WB-740, fix dominos large gap

--- a/specifics/exercizer/components/_dominos.scss
+++ b/specifics/exercizer/components/_dominos.scss
@@ -24,8 +24,6 @@
     }
 
     &.large {
-        gap: 1rem;
-
         .item {
             .domino {
                 .top {
